progressive stashing
