# models/Dish.js
@@ -1,9 +1,0 @@
-class Dish {
-    constructor(id, name, price=0.0){
-        this.id = id;
-        this.name = name;
-        this.price = price;
-    }
-}
-
-module.exports = Dish;
